deploy/andromeda/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ayakaleaf-pro
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - overleaf.geekpie.club
      secretName: ayakaleaf-pro-tls
  rules:
    - host: overleaf.geekpie.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ayakaleaf-pro
                port:
                  name: http
